Added production Url

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<form action="http://192.168.1.169:8080" method="GET">
+		<form action="https://us-central1-empires-273722.cloudfunctions.net/submit/" method="GET">
 			<div>
 				<label for="username">Input your real name here</label>
 				<input name="username" id="username" value="">
