Updated urls to cloud functions

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<body>
+    <a href="file:///C:/Users/kgray/Documents/empires.github.io/list.html">List</a>
+    <a href="file:///C:/Users/kgray/Documents/empires.github.io/delete.html">Delete</a>
 		<form action="https://us-central1-empires-273722.cloudfunctions.net/submit/" method="GET">
 			<div>
 				<label for="username">Input your real name here</label>
