--- a/new_name.html
+++ b/new_name.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>List</title>
+    <title>index</title>
     <style>
     table,td,th {
       border:solid 1px;
@@ -12,38 +12,38 @@
   <body>
     <a href="file:///C:/Users/kgray/Documents/empires.github.io/index.html">Index</a>
     <a href="file:///C:/Users/kgray/Documents/empires.github.io/delete.html">Delete</a>
-    <div>
-      <label for="gameid-input">Input gameid</label>
+    <div id="join-game">
+      <label for="gameid-input">Input gameid to join game</label>
       <input name="gameid" id="gameid-input">
     </div>
-    <div>
-      <input type="button" value="Submit" onclick="submit()">
+    <div id="new-game-div">
+      <input type="button" value="New Game" onclick="submit()">
     </div>
-    <p id="list"></p>
+    <p id="generated-code"></p>
 
   <script>
     function submit() {
       var gameid = document.getElementById("gameid-input").value;
         console.log(gameid);
-        getData(gameid);
+        generateGameCode(gameid);
     }
 
     
-    function getData(gameid) {
-      console.log('Started getData func');
+    function generateGameCode() {
+      console.log('Started generateGameCode func');
       const Http = new XMLHttpRequest();
-      //const url = 'http://192.168.1.169:8080/?gameid=' + gameid;
-      const url = 'https://us-central1-empires-273722.cloudfunctions.net/list/?gameid=' + gameid;
+      const url = 'https://us-central1-empires-273722.cloudfunctions.net/generate_code';
+      //const url = 'https://us-central1-empires-273722.cloudfunctions.net/list/?gameid=' + gameid;
       Http.open("GET", url);
       Http.send();
       Http.onreadystatechange=function() {
         if(this.readyState==4 && this.status==200){
           response = JSON.parse(Http.response);
           console.log(response);
-          for (i in response) {
-            console.log(response[i]);
-            document.getElementById("list").innerHTML += response[i] + "<br>";
-          }
+          document.getElementById("generated-code").innerHTML = 'gamecode: ' + response;
+          document.getElementById("join-game").remove();
+          document.getElementById("new-game-div").remove();
+          document.getElementById("join-game").remove();
         }
       }
     }
