Enlarged new game button

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <input name="gameid" placeholder="Input gameid" id="gameid-input">
         <input type="button" value="Join Game" onclick="join_game()">
       </div>
-      <bold>or</bold>
+      <p>or</p>
       <div id="new-game-div">
-        <input type="button" value="New Game" onclick="generate_code()">
+        <input class="large" type="button" value="New Game" onclick="generate_code()">
       </div>
       <p id="generated-code"></p>
       <div id="new-name">
